[gd_scene load_steps=9 format=3 uid="uid://ue6nvwc3k71h"]

[ext_resource type="Script" path="res://CartasMenu.gd" id="1_jgxtx"]
[ext_resource type="Texture2D" uid="uid://cb83ap3n76jjh" path="res://Assets/Imagenes/Fondos/Fondo-minijuegos.png" id="2_8rxib"]
[ext_resource type="Texture2D" uid="uid://bvpng8xhsgokl" path="res://Assets/Imagenes/Marco sin fondo.png" id="3_3tbdv"]
[ext_resource type="FontFile" uid="uid://cboxbr3bx4363" path="res://Assets/Fuentes/Lemon Shake Shake.ttf" id="4_qdw1d"]
[ext_resource type="Texture2D" uid="uid://ccamssf1guwgi" path="res://Assets/Imagenes/manzana.png" id="5_11wri"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxxs8"]

[sub_resource type="Theme" id="Theme_8ttdm"]
Label/colors/font_color = Color(0.247059, 1, 0.933333, 1)
Label/colors/font_outline_color = Color(0.176471, 0, 0.627451, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/outline_size = 3
Label/font_sizes/font_size = 39
Label/fonts/font = ExtResource("4_qdw1d")
Label/styles/normal = SubResource("StyleBoxEmpty_dxxs8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aqg81"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_jgxtx")

[node name="Fondo, escenario" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -1.0
offset_right = 1154.0
offset_bottom = 651.0
size_flags_vertical = 4
texture = ExtResource("2_8rxib")

[node name="Fondo, cartas" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 189.0
offset_top = 59.0
offset_right = 993.0
offset_bottom = 571.0
texture = ExtResource("3_3tbdv")
expand_mode = 1

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 34.0
offset_top = 20.0
offset_right = 94.0
offset_bottom = 43.0
theme = SubResource("Theme_8ttdm")
text = "Puntaje"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 376.0
offset_top = 147.0
offset_right = 740.0
offset_bottom = 406.0
pivot_offset = Vector2(182, 130)
columns = 4

[node name="FPSlabel" type="Label" parent="."]
offset_right = 45.0
offset_bottom = 23.0

[node name="Manzana" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(53, 32)
scale = Vector2(5.6, 4)
texture = ExtResource("5_11wri")

[node name="Manzana2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(120, 32)
scale = Vector2(5.6, 4)
texture = ExtResource("5_11wri")

[node name="Manzana3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(189, 32)
scale = Vector2(5.6, 4)
texture = ExtResource("5_11wri")

[node name="Manzana4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(259, 32)
scale = Vector2(5.6, 4)
texture = ExtResource("5_11wri")

[node name="Manzana5" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(330, 32)
scale = Vector2(5.6, 4)
texture = ExtResource("5_11wri")

[node name="Manzana6" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(400, 32)
scale = Vector2(5.6, 4)
texture = ExtResource("5_11wri")

[node name="ClickCounter" type="Label" parent="."]
offset_left = 919.407
offset_top = 35.636
offset_right = 959.407
offset_bottom = 58.636

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-335.139, 352.778)
process_material = SubResource("ParticleProcessMaterial_aqg81")
